--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,10 +14,12 @@
       <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
       <li><%= link_to 'ブランド', "#", class: "brand-list" %></li>
     </ul>
+    <%# deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
     <% if user_signed_in? %>
       <ul class='lists-right'>
+      ログインしています。
         <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
-        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
+        <li><%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: "logout" %></li>
       </ul>
     <% else %>
       <ul class='lists-right'>
@@ -25,10 +27,6 @@
         <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
       </ul>
     <% end %>
-
-      <%# deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
-      <%# <li><%= link_to current_user.nickname, "#", class: "user-nickname" </li> %>
-      <%# <li><%= link_to 'ログアウト', "#", method: :delete, class: "logout" </li> %>
       <%# //deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
     </ul>
   </div>
