--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -149,11 +149,7 @@
             <div class='item-price'>
               <span>
                 <%= item.price %>円<br>
-                <% if item.shipping_cost_id == 2 %>
-                  <%= "着払い(購入者負担)"%>
-                <% elsif item.shipping_cost_id == 3 %>
-                  <%= "送料込み(出品者負担)"%>
-                <% end %>
+                <%= item.shipping_cost.name %>
               </span>
               <div class='star-btn'>
                 <%= image_tag "star.png", class:"star-icon" %>
