--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,14 +7,15 @@
     </h1>
     <%# 購入内容の表示 %>
     <div class='buy-item-info'>
-      <%= image_tag "item-sample.png", class: 'buy-item-img' %>
+      <%#= image_tag "item-sample.png", class: 'buy-item-img' %>
+      <%= image_tag @item.image ,class:"item-box-img" %>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
-          <%= "商品名" %>
+          <%= @item.item_name %>
         </h2>
         <div class='buy-item-price'>
-          <p class='item-price-text'>¥<%= '999,999,999' %></p>
-          <p class='item-price-sub-text'><%= '配送料負担' %></p>
+          <p class='item-price-text'>¥<%= @item.price %></p>
+          <p class='item-price-sub-text'><%= @item.shipping_cost.name %></p>
         </div>
       </div>
     </div>
@@ -26,10 +27,12 @@
         支払金額
       </h1>
       <p class='item-payment-price'>
-        ¥<%= "販売価格" %>
+        ¥<%= @item.price %>
       </p>
     </div>
     <%# /支払額の表示 %>
+
+    <%= render 'shared/error_messages', model: @order_delivery %>
 
     <%= form_with model: @order_delivery, id: 'charge-form', class: 'transaction-form-wrap',local: true, url: item_orders_path(@item) do |f| %>
     <%# カード情報の入力 %>
@@ -42,7 +45,9 @@
           <label class="form-text">カード情報</label>
           <span class="indispensable">必須</span>
         </div>
-        <div id="number-form" class="input-default"></div>
+        <div id="number-form" class="input-default">
+          <%#= f.text_field :aaaaa, class:"input-default", id:"aaaaa", placeholder:"例）1212", maxlength:"16" %>
+        </div>
         <div class='available-card'>
           <%= image_tag 'card-visa.gif', class: 'card-logo'%>
           <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
