--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -10,7 +10,7 @@
     <%# 購入内容の表示 %>
     <div class='buy-item-info'>
       <%#= image_tag "item-sample.png", class: 'buy-item-img' %>
-      <%= image_tag @item.image ,class:"item-box-img" %>
+      <%= image_tag @item.image ,class:"buy-item-img" %>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
           <%= @item.item_name %>
